Ericsson A-bis TFP (Traffic Forwarding Protocol)
Fc00/cjdns Protocol
GSM Osmux
Health Level 7 (HL7)
High-speed SECS message service (HSMS)
iPerf2
ISO 15765
Local Service Discovery (LSD)
M2 Application Protocol
Nordic BLE Sniffer
RFTap Protocol
SCTE-35 Digital Program Insertion Messages
Snort Post-dissector
Unified Diagnostic Services (UDS)
vSocket
Windows Cluster Management API (clusapi)
--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

_Non-empty section placeholder._
// Add one file type per line between the --sort-and-group-- delimiters.
--sort-and-group--
--sort-and-group--

=== New and Updated Capture Interfaces support

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

//=== Major API Changes
IEEE802.11: wlan_mgt display filter element got renamed to wlan.

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Known Problems

Dumpcap might not quit if Wireshark or TShark crashes.
(ws-buglink:1419[])

The BER dissector might infinitely loop.
(ws-buglink:1516[])

Capture filters aren't applied when capturing from named pipes.
(ws-buglink:1814[])

Filtering tshark captures with read filters (-R) no longer works.
(ws-buglink:2234[])
