@@ -663,6 +663,7 @@ set(DISSECTOR_SRC
 	packet-gsm_sms_ud.c
 	packet-gsm_um.c
 	packet-gsmtap.c
+	packet-gsmtap_log.c
 	packet-gssapi.c
 	packet-gtp.c
 	packet-gtpv2.c
