@@ -72,6 +72,7 @@ Snort Post-dissector
 Unified Diagnostic Services (UDS)
 vSocket
 Windows Cluster Management API (clusapi)
+GSMTAP based logging
 --sort-and-group--
 
 === Updated Protocol Support
